// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
@media  {
  .c-bAPtzY {
    border-radius: var(--radii-round);
    height: 12px;
    position: relative;
    overflow: hidden;
    width: 100%;
  }

  .c-kZAonO {
    box-sizing: border-box;
    position: absolute;
    background-color: currentcolor;
    height: 100%;
  }
}

@media  {
  .c-bAPtzY-jNZdEO-cv {
    border: 1px solid var(--colors-tonal400);
    background: white;
    color: var(--colors-primary500);
  }
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="c-bAPtzY c-bAPtzY-jNZdEO-cv"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="c-kZAonO"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
@media  {
  .c-bAPtzY {
    border-radius: var(--radii-round);
    height: 12px;
    position: relative;
    overflow: hidden;
    width: 100%;
  }

  .c-kZAonO {
    box-sizing: border-box;
    position: absolute;
    background-color: currentcolor;
    height: 100%;
  }
}

@media  {
  .c-bAPtzY-jNZdEO-cv {
    border: 1px solid var(--colors-tonal400);
    background: white;
    color: var(--colors-primary500);
  }

  .c-bAPtzY-kjCNYU-cv {
    border: 1px solid var(--colors-tonal400);
    background: white;
    color: var(--colors-secondary500);
  }

  .c-bAPtzY-bXmYIg-cv {
    background: var(--colors-tonal300);
    color: var(--colors-primary500);
  }
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="c-bAPtzY c-bAPtzY-bXmYIg-cv"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="c-kZAonO"
      data-max="100"
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
